fixed double scroll on modaal

--- a/public/css/caredove-public.css
+++ b/public/css/caredove-public.css
@@ -95,8 +95,8 @@ button.caredove-button-solid, input[type="button"].caredove-button-solid, .cared
 }
  #caredove-iframe, .modaal-iframe-elem {
     width:100%;
-    min-height:900px;
-    height:100%;
+    /* min-height:900px; */
+    height:98%;
     border:0;
     overflow-x:hidden; overflow-y:auto;
  }
